# shopify-mmm-app

./: .dockerignore  .env.example  .eslintignore  .eslintrc.cjs  .gitignore  Dockerfile  README.md  docker-compose.yml  fly.toml  package.json  shopify.app.toml
app/: globals.d.ts  root.tsx  shopify.server.ts
app/constants/: plans.ts
app/routes/: api.analysis.$id.status.tsx  api.results.$id.download.tsx  api.template.download.tsx  app._index.tsx  app.analysis.tsx  app.data.tsx  app.plans.tsx  app.privacy.tsx  app.results.$id.tsx  app.settings.tsx  app.terms.tsx  app.tsx  webhooks.app.subscriptions-update.tsx  webhooks.orders.create.tsx  webhooks.tsx
app/services/: analysis-runner.server.ts  billing.server.ts  data-merger.server.ts  excel-parser.server.ts  excel-template.server.ts  seed-test-data.server.ts  shop.server.ts  shopify-data.server.ts
docs/: app-store-listing.md  app-store-submission-guide.md  competitive-analysis.md  requirements.md  shopify-api-spec.md  technical-design.md
engine/: Dockerfile  pyproject.toml
engine/src/: __init__.py  api.py  config.py  worker.py
engine/src/models/: __init__.py  mmm.py
engine/src/postprocessing/: __init__.py  result_formatter.py
engine/src/preprocessing/: data_validator.py  feature_engineering.py
engine/tests/: __init__.py
engine/tests/fixtures/: sample_data.csv  test_90days.csv
prisma/: schema.prisma
scripts/: capture-screenshots.mjs  generate-icon.mjs
scripts/screenshot-pages/: dashboard.html  data-setup.html  plans.html  polaris.css  results-budget.html  results-contribution.html  (+1 more)
(+8 files in other folders)
